project1-cicd-docker-gha/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-portfolio-app
  labels:
    app: devops-portfolio-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-portfolio-app
  template:
    metadata:
      labels:
        app: devops-portfolio-app
    spec:
      containers:
        - name: app
          image: ghcr.io/OWNER/REPO:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
      imagePullSecrets:
        - name: ghcr-pull-secret
