project1-cicd-docker-gha/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-portfolio-svc
spec:
  selector:
    app: devops-portfolio-app
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
