project1-cicd-docker-gha/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-portfolio-ing
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: homolog.seu-dominio.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-portfolio-svc
                port:
                  number: 80
